[gd_scene load_steps=24 format=3 uid="uid://bqybn7w6eqk4y"]

[ext_resource type="Script" path="res://Scripts/small_mario.gd" id="1_bv3jb"]
[ext_resource type="Texture2D" uid="uid://cnhcr4humoj1c" path="res://Art/s_mario.png" id="1_pfa5r"]
[ext_resource type="Texture2D" uid="uid://d24mn34nh4jah" path="res://Art/mario.png" id="2_j5xqw"]
[ext_resource type="AudioStream" uid="uid://b6h22nufkkupj" path="res://Songs/enemy_damage.wav" id="3_0o5dy"]
[ext_resource type="AudioStream" uid="uid://dwgj11svxocu5" path="res://Songs/jump.wav" id="4_svsas"]
[ext_resource type="AudioStream" uid="uid://dftky3f25o0cm" path="res://Songs/power-up.wav" id="5_eyj85"]
[ext_resource type="AudioStream" uid="uid://cjyxigv2561qr" path="res://Songs/power-up_appears.wav" id="6_0m4s2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6pgc2"]
atlas = ExtResource("2_j5xqw")
region = Rect2(207, 76, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_75thm"]
atlas = ExtResource("2_j5xqw")
region = Rect2(7, 38, 18, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7coe"]
atlas = ExtResource("1_pfa5r")
region = Rect2(122, 7, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vit1"]
atlas = ExtResource("1_pfa5r")
region = Rect2(4, 9, 14, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkicj"]
atlas = ExtResource("1_pfa5r")
region = Rect2(105, 6, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_dldct"]
atlas = ExtResource("1_pfa5r")
region = Rect2(258, 9, 15, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_p81hs"]
atlas = ExtResource("1_pfa5r")
region = Rect2(275, 9, 15, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghm0p"]
atlas = ExtResource("1_pfa5r")
region = Rect2(293, 8, 14, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajs30"]
atlas = ExtResource("1_pfa5r")
region = Rect2(4, 9, 14, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsf51"]
atlas = ExtResource("1_pfa5r")
region = Rect2(21, 9, 15, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_mebuj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pgc2")
}],
"loop": true,
"name": &"big_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75thm")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7coe")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vit1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkicj")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dldct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p81hs")
}],
"loop": true,
"name": &"running",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghm0p")
}],
"loop": true,
"name": &"running_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajs30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsf51")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ajjkh"]
resource_name = "growing"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [&"idle", &"big_idle", &"idle", &"big_idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Growing:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gnlhj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Growing:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7jdm8"]
_data = {
"RESET": SubResource("Animation_gnlhj"),
"growing": SubResource("Animation_ajjkh")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gk5s5"]
radius = 7.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hap5y"]
radius = 8.0
height = 22.0

[node name="SmallMario" type="CharacterBody2D"]
collision_mask = 10
script = ExtResource("1_bv3jb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mebuj")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7jdm8")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gk5s5")

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_hap5y")
debug_color = Color(0.968627, 0, 0.478431, 0.419608)

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0o5dy")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_svsas")
volume_db = -6.559

[node name="MushroomPicked" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_eyj85")

[node name="Growing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0m4s2")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
